packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/public-field/PublicFieldCase.java
package sample.bad;

class PublicFieldCase {
    public String name;
}
